feat: create show opening swagger documentation
